[package]
name = "btune"
version = "0.1.0"
authors = ["Eugene Mamin <TheDZhon@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "0.2.4"

[build-dependencies]
slint-build = "0.2.4"
